located in I<pathdb> when B<pullnews> is run as the news user, or
otherwise in the running user's home directory.  It was previously
stored in F<.pullnews> in the running user's home directory (even for
the news user).

=item *

Building with Libtool is no longer optional.  The B<--enable-libtool>
option to B<configure> has been removed.

=item *

When building INN with S<Berkeley DB>, Cyrus SASL, S<Kerberos
v5>, OpenSSL, or zlib support, no longer add standard locations to
compiler and linker include flags.  Such default paths are now added
only if explicitly given to one or more of the B<--with-bdb>,
B<--with-bdb-include>, B<--with-bdb-lib>, B<--with-sasl>,
B<--with-sasl-include>, B<--with-sasl-lib>, B<--with-krb5>,
B<--with-krb5-include>, B<--with-krb5-lib>, B<--with-openssl>,
B<--with-openssl-include>, B<--with-openssl-lib>, B<--with-zlib>,
B<--with-zlib-include>, or B<--with-zlib-lib> configure flags (the
flags ending with C<-include> and C<-lib> are new in S<INN 2.6.0>).

=item *

If the S<Berkeley DB>, Cyrus SASL, S<Kerberos v5>, or OpenSSL SSL
and crypto libraries are found at configure time, INN will now be
built with support for them unless respectively the B<--without-bdb>,
B<--without-sasl>, B<--without-krb5>, or B<--without-openssl> flags
are explicitly passed to configure.

Note that it was already the default behaviour for zlib support when
S<Berkeley DB> support was also enabled.

=item *

The configure flag B<--enable-reduced-depends> has been added to request
that library probes assume shared libraries are in use and dependencies
of libraries should not be probed.  It therefore tries to minimize the
shared library dependencies of the resulting binaries on platforms with
proper shared library dependencies.  This is not enabled by default, and
is of interest primarily to people building packages for distributions.

=item *

The INN test suite driver is now fully synchronized with the upstream